# libaas

./: .gitignore  CMakeLists.txt  LICENSE  README  coding_style_libaas.xml
applications/: CMakeLists.txt
applications/aas/: CMakeLists.txt  aas.cpp  simpleTest1.cpp
applications/testApplications/: CMakeLists.txt  readDigestModify.cpp  simpleTest_rawAminoAcid.cpp  simpleTest_rawModification.cpp
cmake/: coverage.sh.in  unit_coverage.sh.in
cmake/scripts/: coverage.sh.in  unit_coverage.sh.in
doc/: AminoAcidExamples.h  AminoAcidSequenceExamples.h  Complex1.h  Doxyfile.cmake  ElementsExamples.h  Mainpage.h  ModificationExamples.h  RawAminoAcidExamples.h  RawModificationExamples.h  ResidueExamples.h  StoichiometryConfigs.h
examples/: AminoAcid.cpp  AminoAcidSequence.cpp  CMakeLists.txt  Complex1.cpp  Elements.cpp  Modifications.cpp  RawAminoAcid.cpp  RawModificationSpeedTest.cpp  RawModifications.cpp  Residue.cpp  StoichiometryConfigs.cpp
include/aas/: AminoAcid.hpp  AminoAcidSequence.hpp  Collection.hpp  Element.hpp  ElementImpl.hpp  Error.hpp  FlyWeightReplacement.hpp  Isotope.hpp  Modification.hpp  RawAminoAcid.hpp  RawAminoAcidImpl.hpp  RawModification.hpp  RawModificationImpl.hpp  Residue.hpp  Specificity.hpp  Stoichiometry.hpp  StoichiometryConfig.hpp  StoichiometryConfigImpl.hpp  Types.hpp
include/aas/adapter/: LibIPACA.hpp
include/aas/tools/: Digester.hpp  FastaReader.hpp
include/libaas/: AminoAcid.hpp  AminoAcidImpl.hpp  AminoAcidSequence.hpp  Collection.hpp  Element.hpp  ElementImpl.hpp  ElementTable.hpp  Error.hpp  FlyWeightReplacement.hpp  Isotope.hpp  Libaas.hpp  Modification.hpp  ModificationImpl.hpp  RawAminoAcid.hpp  RawAminoAcidImpl.hpp  RawModification.hpp  RawModificationImpl.hpp  Residue.hpp  Specificity.hpp  Stoichiometry.hpp  StoichiometryConfig.hpp  StoichiometryConfigImpl.hpp  Types.hpp
include/libaas/adapter/: LibIPACA.hpp
include/libaas/old/: ElementTable.hpp  Types.hpp
include/libaas/tools/: Digester.hpp  FastaReader.hpp
scripts/: unimod.xml  unimodParser.py
src/: AminoAcid.cpp  AminoAcidImpl.cpp  AminoAcidSequence.cpp  CMakeLists.txt  Element.cpp  ElementImpl.cpp  ElementTable.cpp  Isotope.cpp  Modification.cpp  ModificationImpl.cpp  RawAminoAcid.cpp  RawAminoAcidImpl.cpp  RawModification.cpp  RawModificationImpl.cpp  Residue.cpp  Specificity.cpp  Stoichiometry.cpp  StoichiometryConfig.cpp  StoichiometryConfigImpl.cpp
src/old/: ElementTable.cpp
src/tools/: Digester.cpp  FastaReader.cpp
test/: AminoAcid-test.cpp  AminoAcidSequence-test.cpp  CMakeLists.txt  Digester-test.cpp  Element-test.cpp  ElementTable-test.cpp  Error-test.cpp  FastaReader-test.cpp  Isotope-test.cpp  Modification-test.cpp  Modification_speed-test.cpp-test.cpp  RawAminoAcid-test.cpp  RawModification-test.cpp  Residue-test.cpp  Specificity-test.cpp  Stoichiometry-test.cpp  StoichiometryConfig-test.cpp  TEST_TEMPLATE.cpp  create_test.py
test/include/vigra/: config.hxx  error.hxx  unittest.hxx
