INCLUDE_DIRECTORIES(
	${LIBAAS_SOURCE_DIR}/include
)

LINK_DIRECTORIES(
	${LIBAAS_BINARY_DIR}/src
)

SET(SRC_READDIGESTMODIFY readDigestModify.cpp)
SET(SRC_SIMPLETEST_RAWMODIFICATION simpleTest_rawModification.cpp)
SET(SRC_SIMPLETEST_RAWAMINOACID simpleTest_rawAminoAcid.cpp)

ADD_EXECUTABLE(readDigestModify ${SRC_READDIGESTMODIFY})
TARGET_LINK_LIBRARIES(
	readDigestModify
	aas
)

ADD_EXECUTABLE(simpleTest_rawModification ${SRC_SIMPLETEST_RAWMODIFICATION})
TARGET_LINK_LIBRARIES(
	simpleTest_rawModification
	aas
)

ADD_EXECUTABLE(simpleTest_rawAminoAcid ${SRC_SIMPLETEST_RAWAMINOACID})
TARGET_LINK_LIBRARIES(
	simpleTest_rawAminoAcid
	aas
)

INSTALL(TARGETS
	RUNTIME DESTINATION bin)
